# nonebot-plugin-appstore-gameranking

./: LICENSE  README.md  appstore_scraper_demo.py  appstore_top_200.json  pyproject.toml  target_games_ranking_sorted.json
nonebot_plugin_appstore_gameranking/: __init__.py  data.py  handlers.py
